# nw

./: Cargo.toml  README.md  build.rs  flake.nix  shell.nix
derive/: Cargo.toml
derive/src/: lib.rs
nix/: hm.nix  nixos.nix  package.nix
src/: main.rs
src/commands/: build.rs  info.rs  locate.rs  mod.rs  run.rs  search.rs  shell.rs
src/commands/flake/: list_update.rs  mod.rs  update.rs
src/commands/os/: build.rs  clean.rs  list_update.rs  mod.rs  update.rs
src/utils/: api.rs  args.rs  build.rs  config.rs  errors.rs  flake.rs  http.rs  mod.rs  xdg.rs
src/utils/ext/: mod.rs  tabled.rs
src/utils/flake/: get_updates.rs  metadata.rs  mod.rs  registry.rs  remote.rs  update.rs
src/utils/nixos/: build.rs  get_updates.rs  mod.rs  update.rs
