[package]
name = "nw"
version = "0.1.0"
edition = "2021"
authors = ["Po Co"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
derive_more = { version = "2.0.0", features = ["deref"] }
elasticsearch-dsl = "0.4.21"
rayon = "1.10.0"
regex = "1.10.5"
reqwest = { version = "0.12.4", features = [ "blocking", "json" ] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
subprocess = "0.2.9"
tabled = "0.18.0"
terminal_size = "0.4.0"
toml = "0.8.14"
xdg = "2.5.2"

[features]
ui = []
